--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,18 @@
-#chapter_details{
+#chapter_details {
     position: sticky;
     top: 20px;
+}
+
+.load {
+    z-index: 2;
+    height: 100vh;
+    opacity: 0.8;
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    overflow: hidden;
 }
