--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,12 @@
     width: 100%;
     overflow: hidden;
 }
+.aboutCard{
+    transition: box-shadow 0.5s;
+}
+
+.aboutCard:hover{
+    -webkit-box-shadow: 0px 0px 13px 0px rgba(163,145,163,1);
+-moz-box-shadow: 0px 0px 13px 0px rgba(163,145,163,1);
+box-shadow: 0px 0px 13px 0px rgba(163,145,163,1);
+}
